include clj-easy and set native-image params for working build - #15